Cadastro de atividades

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,7 @@ NotBlank.requisicaoNovoPaciente.telefone=O campo telefone é obrigatório
 NotBlank.requisicaoNovoPaciente.email=O campo email é obrigatório
 NotBlank.requisicaoNovoPaciente.cpf=O campo cpf é obrigatório
 NotBlank.requisicaoNovoPaciente.endereco=O campo endereço é obrigatório
+
+NotBlank.requisicaoNovaAtividade.titulo=O campo nome é obrigatório
+NotBlank.requisicaoNovaAtividade.descricao=O campo telefone é obrigatório
+NotBlank.requisicaoNovaAtividade.data=O campo email é obrigatório
